# longdemo

./: .ccls  .gitignore  README  README.org
.ccls-cache/@@home@jacksoncy@work@c@longdemo@/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@param.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@ioctl.h.blob  @usr@include@asm@ioctls.h.blob  @usr@include@asm@param.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@epoll.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@eventfd.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@fenv.h.blob  @usr@include@bits@floatn-common.h.blob  (+1632 more)
asioDemo/: CMakeLists.txt  client.py  main.cpp  msgs.pb.h
longClient/: README.org  longClient.pro
longLib/: build.sh  epoll.cpp  hello.lua
longLib/Algorithm/: BinaryHeap.hpp  BinaryTree.hpp  CMakeLists.txt  HashRing.hpp  HeapTest.cpp  Makefile  MaxHeap.hpp  RingBuffer.hpp  TestLog.cpp  TestTree.cpp  heap_test.hpp  log_test.hpp  main.cpp  meta.cpp  ring_test.hpp  tree_test.hpp
longLib/Lua/: build.sh  (+2 more)
longServer/: .gitignore  CMakeLists.txt  Makefile  README.org  cmake.sh  conanfile.txt  main.cpp
longServer/.devcontainer/: Dockerfile  devcontainer.json
longServer/cmake/: FindGraphicsMagick.cmake  FindJemalloc.cmake  FindMariaDB.cmake  FindMaxMindDB.cmake  FindRapidJSONAlt.cmake  FindThrift.cmake  FindZSTD.cmake  FindgRPCAlt.cmake  README.org
longServer/include/: Acceptor.hpp  Address.hpp  Backend.hpp  ConnectPool.hpp  Connector.hpp  DBPool.hpp  Dialer.hpp  EPoller.hpp  Epoller.hpp  EventLoop.hpp  FileUtil.hpp  Formatter.hpp  IP.hpp  Listener.hpp  LogLevel.cpp  LogLevel.hpp  Logger.hpp  MinHeap.hpp  RingBuffer.hpp  Socket.hpp  SyncQueue.hpp  TcpClient.hpp  TcpServer.hpp  ThreadPool.hpp  TimeUtil.hpp  Timer.hpp  Util.hpp  db_conn.hpp  db_conn_pool.hpp  dsn.hpp  epoller.hpp  ring_buffer.hpp  tcp_client.hpp  tcp_server.hpp  thread_pool.hpp
longServer/include/database/: conn.hpp  connect.hpp  connect_pool.hpp  db_conn.hpp  db_conn_pool.hpp  dsn.hpp  mysql.hpp  postgres.hpp
longServer/include/log/: backend.hpp  formatter.hpp  level.hpp  log_level.hpp  logger.hpp
longServer/include/net/: address.hpp  connect.hpp  dialer.hpp  dns.hpp  epoller.hpp  event_loop.hpp  ip.hpp  listener.hpp  socket.hpp  tcp_client.hpp  tcp_dialer.hpp  tcp_server.hpp  tcp_socket.hpp  udp_dialer.hpp  udp_socket.hpp  unix_dialer.hpp  unix_socket.hpp
longServer/include/net/http/: client.hpp  cookie.hpp  header.hpp  request.hpp  response.hpp  router.hpp  server.hpp  status.hpp  types.hpp  url.hpp
longServer/include/net/http2/: encoder.hpp  hpack.hpp
longServer/include/test/: CMakeLists.txt  LogTest.cpp  TimeTest.cpp  build.sh  hiTest.cpp
longServer/include/utils/: codec.hpp  dispatcher.hpp  epoll.hpp  epoller.hpp  event_loop.hpp  file.hpp  file_util.hpp  functions.hpp  io_uring.hpp  log_helper.hpp  min_heap.hpp  noncopyable.hpp  ring_buffer.hpp  sync_queue.hpp  thread_pool.hpp  time.hpp  time_util.hpp  timer.hpp  util.hpp  utils.hpp
longServer/src/: CMakeLists.txt  EPoll.cpp  EPoll.h  EPoller.cpp  EPoller.h  EventLoop.cpp  EventLoop.h  EventLoop.hpp  Logger.cpp  Logger.h  MinHeap.hpp  MiniHeap.hpp  Net.cpp  Net.h  Socket.cpp  Socket.h  SyncQueue.hpp  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  ThreadPool.h  TimeUtil.cpp  TimeUtil.h  TimeUtil.hpp  TimeUtility.cpp  TimeUtility.h  Timer.cpp  Timer.h  Util.hpp  main.cpp
longServer/src/test/: TimeTest.cpp  fork.cpp  thpool.cpp
longServer/test/: CMakeLists.txt  LogTest.cpp  MinTest.cpp  RingTest.cpp  TestFun.hpp  TestMain.cpp  TestRing.hpp  TestSocket.hpp  TestThread.hpp  TestTime.hpp  address_test.hpp  db.hpp  db_test.hpp  dns_test.hpp  doctest.h  dsn.hpp  dsn_test.hpp  fun_test.hpp  function.hpp  functions.hpp  log.hpp  log_test.hpp  main.cpp  main_test.cpp  ring.hpp  ring_test.hpp  socket.hpp  socket_test.hpp  tcpServerTest.cpp  thread.hpp  thread_test.hpp  threads.hpp  time.hpp  time_test.hpp
(+90 files in other folders)
